force-app/main/default/objects/developer__c/developer__c.object-meta.xml
<CustomObject>
    <label>developer</label>
    <nameField>
        <label>developer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>developers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>