force-app/main/default/objects/developer__c/fields/age__c.field-meta.xml
<CustomField>
    <fullName>age__c</fullName>
    <description>calculates the age of manager</description>
    <formula>YEAR( TODAY())-  YEAR( DOB__c )-
IF(MONTH(TODAY()) &gt; MONTH( DOB__c ) || (MONTH(TODAY()) = MONTH(DOB__c) &amp;&amp; DAY(TODAY()) &lt; DAY( DOB__c )),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Age calculated on DOB</inlineHelpText>
    <label>age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>