force-app/main/default/objects/developer__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <description>country name</description>
    <inlineHelpText>select country</inlineHelpText>
    <label>country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>India</fullName>
                <default>true</default>
                <label>India</label>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>