force-app/main/default/objects/developer__c/fields/reporting_manager__c.field-meta.xml
<CustomField>
    <fullName>reporting_manager__c</fullName>
    <label>reporting_manager</label>
    <referenceTo>manager__c</referenceTo>
    <relationshipLabel>developers</relationshipLabel>
    <relationshipName>developers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>